--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Today's Date</title>
+    <title>Promotion</title>
     <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=2d65db6c3f227' async='true'></script>
 </head>
  
