--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  
 <body>
  <button onclick="pixel-script-poptin">Click me</button>
+ <a href="https://app.popt.in/APIRequest/click/e3056703df260" asas/>
  sssssssssssss
 </body>
  
