--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Promotion</title>
     <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=2d65db6c3f227' async='true'></script>
+ <link rel="stylesheet" href="main.css">
 </head>
  
 <body>
- <button onclick="pixel-script-poptin">Click me</button>
- <a href="https://app.popt.in/APIRequest/click/e3056703df260" asas/>
- sssssssssssss
+ <div class="like">
+   <a href="https://app.popt.in/APIRequest/click/e3056703df260" >
+     Play Now
+   </a>
+   
+   
+ </div>
 </body>
  
 </html>
