--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
  
 <head>
-    <meta charset="UTF-8">
+ <link rel="stylesheet" href="~/main.css">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Promotion</title>
     <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=2d65db6c3f227' async='true'></script>
- <link rel="stylesheet" href="main.css">
 </head>
  
 <body>
