--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@ body {
       
     }
       }
-
+.link
+{
+   color:Black;
+   text-decoration: none; 
+   background-color: none;
+}
 }
  </style>
     <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=2d65db6c3f227' async='true'></script>
@@ -60,8 +65,13 @@ body {
  
 <body>
  <div class="like">
-   <a href="https://app.popt.in/APIRequest/click/e3056703df260" >
-     Play Now
+   
+  <a href="https://app.popt.in/APIRequest/click/e3056703df260" >
+    
+    <div class="link">
+         <h2>Play Now</h2>
+    </div>
+   
    </a>
    
    
